--- a/css/style.css
+++ b/css/style.css
@@ -4548,8 +4548,7 @@ input[type="button"].btn-block {
   position: relative;
   display: block;
   padding: 1rem 1.5rem;
-  background-color: #FFF;
-  border: 1px solid #eaecf3; }
+  background-color: #FFF; }
   .list-group-item:first-child {
     border-top-left-radius: inherit;
     border-top-right-radius: inherit; }
